--- a/css/index.scss
+++ b/css/index.scss
@@ -67,7 +67,7 @@
 }
 
 // 第1页---------------------------------------------------------------------------------------------------------------------------
-.page-1{
+.page-1 .fp-tableCell{
   display: flex!important;
   @extend .column-align-center;
   span{
@@ -95,7 +95,7 @@
 }
 
 // 第2页---------------------------------------------------------------------------------------------------------------------------
-.page-2{
+.page-2 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   img{
@@ -112,7 +112,7 @@
 }
 
 // 第3页---------------------------------------------------------------------------------------------------------------------------
-.page-3{
+.page-3 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -127,7 +127,7 @@
 }
 
 // 第4页---------------------------------------------------------------------------------------------------------------------------
-.page-4{
+.page-4 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -142,7 +142,7 @@
 }
 
 // 第5页---------------------------------------------------------------------------------------------------------------------------
-.page-5{
+.page-5 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -157,7 +157,7 @@
 }
 
 // 第6页---------------------------------------------------------------------------------------------------------------------------
-.page-6{
+.page-6 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -172,7 +172,7 @@
 }
 
 // 第7页---------------------------------------------------------------------------------------------------------------------------
-.page-7{
+.page-7 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -186,7 +186,7 @@
   }
 }
 // 第7页---------------------------------------------------------------------------------------------------------------------------
-.page-8{
+.page-8 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
@@ -200,7 +200,7 @@
   }
 }
 // 第7页---------------------------------------------------------------------------------------------------------------------------
-.page-9{
+.page-9 .fp-tableCell{
   display: flex!important;
   @extend .column-center;
   color:#fff;
