--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,35 @@
   height: 100%;
 }
 
+#canvas1, #canvas2 {
+  position: fixed;
+  width: 30px;
+  height: 52px;
+  z-index: 999;
+}
+
+#canvas1 {
+  left: 0;
+  bottom: 20px;
+}
+
+#canvas2 {
+  right: 0;
+  top: 20px;
+}
+
+.number {
+  position: fixed;
+  height: 24px;
+  right: 0;
+  bottom: 20px;
+  color: #fff;
+  line-height: 24px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 0 15px;
+  border-radius: 12px 0 0 12px;
+}
+
 .page {
   position: relative;
 }
