--- a/css/index.scss
+++ b/css/index.scss
@@ -232,3 +232,22 @@
     width: 80%;
   }
 }
+
+
+// 进度条---------------------------------------------------------------------------------------------------
+.progress {
+  position: fixed;
+  top:50%;
+  left:50%;
+  width: 150px;
+  height: 150px;
+  margin-top:-75px;
+  margin-left:-75px;
+  border-radius: 50%;
+  z-index: 99999;
+  background-color: #ff00ff;
+  color:#fff;
+  text-align: center;
+  line-height: 150px;
+  font-size:35px;
+}
