--- a/css/index.scss
+++ b/css/index.scss
@@ -199,36 +199,27 @@
   @extend .column-center;
   color:#fff;
   .filter{
-    background-image: url(../assets/b3648329a6b85c493414cc0a855b23a.jpg);
+    background-image: url(../assets/713203667169375777.jpg);
   }
   img{
     display: block;
     width: 80%;
   }
+  img:last-child{
+    margin-top:30px;
+  }
 }
-// 第7页---------------------------------------------------------------------------------------------------------------------------
+// 第8页---------------------------------------------------------------------------------------------------------------------------
 .page-8{
   display: flex!important;
   @extend .column-center;
   color:#fff;
   .filter{
-    background-image: url(../assets/8.jpg);
+    background-image: url(../assets/11.jpg);
   }
   img{
     display: block;
     width: 80%;
   }
 }
-// 第7页---------------------------------------------------------------------------------------------------------------------------
-.page-9{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
-  .filter{
-    background-image: url(../assets/9.jpg);
-  }
-  img{
-    display: block;
-    width: 80%;
-  }
-}
+
