--- a/css/index.scss
+++ b/css/index.scss
@@ -102,7 +102,11 @@
     background-repeat: repeat;
   }
   img{
-    margin:20px auto 10px;
+    display: block;
+    width: 80%;
+  }
+  img:nth-child(2){
+    margin:20px auto;
     display: block;
     width: 80%;
   }
