--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,12 @@
 }
 
 .page-1 img {
-  margin: 20px auto 10px;
+  display: block;
+  width: 80%;
+}
+
+.page-1 img:nth-child(2) {
+  margin: 20px auto;
   display: block;
   width: 80%;
 }
