--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@
   align-items: center;
 }
 
-.column-center, .page-1, .page-2, .page-3, .page-4, .page-5, .page-6, .page-7, .page-8 {
+.column-center, .page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -82,6 +82,7 @@
 
 .page {
   position: relative;
+  display: flex !important;
 }
 
 .page .filter {
@@ -98,36 +99,31 @@
   z-index: -1;
 }
 
+.page img {
+  display: block;
+  width: 80%;
+}
+
 .page .page-boxs {
   width: 100%;
   height: 100%;
 }
 
-.page-1 {
-  display: flex !important;
-}
-
 .page-1 .filter {
-  background-image: url(https://6d61-magic-d13079-1255581239.tcb.qcloud.la/330.jpg?sign=832950a9b929393ce05804a113a70b0f&t=1542688956);
-  background-repeat: repeat;
+  background-image: url("https://6d61-magic-d13079-1255581239.tcb.qcloud.la/u=203448592,3993075874&fm=214&gp=0.jpg?sign=8aa025fe65def043c6a4a7ff7ccb27eb&t=1543980740");
+  background-position: 20% 70%;
+  background-size: 200%;
 }
 
-.page-1 img {
-  display: block;
-  width: 80%;
+.page-1 span {
+  color: #fa58bf;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
 
-.page-1 img:nth-of-type(2) {
-  margin: 20px 0;
-}
-
-.page-2 {
-  display: flex !important;
-}
-
-.page-2 img {
-  display: block;
-  width: 80%;
+.page-1 span:last-of-type {
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .page-2 img:nth-of-type(2) {
@@ -138,90 +134,34 @@
   background-image: url(https://6d61-magic-d13079-1255581239.tcb.qcloud.la/330.jpg?sign=832950a9b929393ce05804a113a70b0f&t=1542688956);
 }
 
-.page-3 {
-  display: flex !important;
-  color: #fff;
-}
-
 .page-3 .filter {
-  background-image: url(../assets/486588782386983111.jpg);
-}
-
-.page-3 img {
-  display: block;
-  width: 80%;
-}
-
-.page-4 {
-  display: flex !important;
-  color: #fff;
+  background-image: url(../assets/4.jpg);
 }
 
 .page-4 .filter {
-  background-image: url(../assets/362458738353902347.jpg);
-}
-
-.page-4 img {
-  display: block;
-  width: 80%;
-}
-
-.page-5 {
-  display: flex !important;
-  color: #fff;
+  background-image: url(../assets/5.jpg);
 }
 
 .page-5 .filter {
-  background-image: url(../assets/375726187900958593.jpg);
-}
-
-.page-5 img {
-  display: block;
-  width: 80%;
-}
-
-.page-6 {
-  display: flex !important;
-  color: #fff;
+  background-image: url(../assets/6.jpg);
 }
 
 .page-6 .filter {
-  background-image: url(../assets/840771328432490454.jpg);
-}
-
-.page-6 img {
-  display: block;
-  width: 80%;
-}
-
-.page-7 {
-  display: flex !important;
-  color: #fff;
-}
-
-.page-7 .filter {
-  background-image: url(../assets/713203667169375777.jpg);
-}
-
-.page-7 img {
-  display: block;
-  width: 80%;
-}
-
-.page-7 img:last-child {
-  margin-top: 30px;
-}
-
-.page-8 {
-  display: flex !important;
-  color: #fff;
-}
-
-.page-8 .filter {
   background-image: url(../assets/11.jpg);
 }
 
-.page-8 img {
-  display: block;
-  width: 80%;
+.page-7 .filter {
+  background-image: url(../assets/12.jpg);
+}
+
+.page-7 img:nth-of-type(2) {
+  margin: 20px 0;
+}
+
+.page-8 .filter {
+  background-image: url(../assets/14.jpg);
+}
+
+.page-9 .filter {
+  background-image: url(../assets/16.jpg);
 }
