--- a/css/index.scss
+++ b/css/index.scss
@@ -74,6 +74,8 @@
 
 .page{ 
    position: relative;
+   display: flex!important;
+   @extend .column-center;
   .filter{
     position: absolute;
     left:0;
@@ -85,8 +87,12 @@
     background-position: center 20%;
     filter: blur(20px);
     opacity: 0.5;
-    z-index: -1;
+    z-index: -1; 
   } 
+  img{
+    display: block;
+    width: 80%;
+  }
   .page-boxs{
     width: 100%;
     height: 100%;
@@ -95,29 +101,24 @@
 
 // 第1页---------------------------------------------------------------------------------------------------------------------------
 .page-1{
-  display: flex!important;
-  @extend .column-center;
   .filter{
-    background-image: url(https://6d61-magic-d13079-1255581239.tcb.qcloud.la/330.jpg?sign=832950a9b929393ce05804a113a70b0f&t=1542688956);
-    background-repeat: repeat;
+    background-image: url('https://6d61-magic-d13079-1255581239.tcb.qcloud.la/u=203448592,3993075874&fm=214&gp=0.jpg?sign=8aa025fe65def043c6a4a7ff7ccb27eb&t=1543980740');
+    background-position: 20% 70%;
+    background-size: 200%;
   }
-  img{
-    display: block;
-    width: 80%;
+  span{
+    color:#fa58bf;
+    font-size:28px;
+    margin-bottom:10px;
   }
-  img:nth-of-type(2){
-    margin:20px 0;
+  span:last-of-type{
+    margin-top:10px;
+    margin-bottom:0;
   }
 }
 
 // 第2页---------------------------------------------------------------------------------------------------------------------------
 .page-2{
-  display: flex!important;
-  @extend .column-center;
-  img{
-    display: block;
-    width: 80%;
-  }
   img:nth-of-type(2){
     margin:20px 0;
   }
@@ -128,87 +129,54 @@
 
 // 第3页---------------------------------------------------------------------------------------------------------------------------
 .page-3{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/486588782386983111.jpg);
-  }
-  img{
-    display: block;
-    width: 80%;
+    background-image: url(../assets/4.jpg);
   }
 }
 
 // 第4页---------------------------------------------------------------------------------------------------------------------------
 .page-4{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/362458738353902347.jpg);
-  }
-  img{
-    display: block;
-    width: 80%;
+    background-image: url(../assets/5.jpg);
   }
 }
 
 // 第5页---------------------------------------------------------------------------------------------------------------------------
 .page-5{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/375726187900958593.jpg);
+    background-image: url(../assets/6.jpg); 
   }
-  img{
-    display: block;
-    width: 80%;
-  }
+  
 }
 
 // 第6页---------------------------------------------------------------------------------------------------------------------------
 .page-6{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/840771328432490454.jpg);
-  }
-  img{
-    display: block;
-    width: 80%;
+    background-image: url(../assets/11.jpg);
   }
 }
 
 // 第7页---------------------------------------------------------------------------------------------------------------------------
 .page-7{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/713203667169375777.jpg);
+    background-image: url(../assets/12.jpg);
   }
-  img{
-    display: block;
-    width: 80%; 
-  }
-  img:last-child{
-    margin-top:30px;
+  img:nth-of-type(2){
+    margin:20px 0;
   }
 }
 // 第8页---------------------------------------------------------------------------------------------------------------------------
 .page-8{
-  display: flex!important;
-  @extend .column-center;
-  color:#fff;
   .filter{
-    background-image: url(../assets/11.jpg);
+    background-image: url(../assets/14.jpg);
   }
-  img{
-    display: block;
-    width: 80%;
+}
+
+// 第9页---------------------------------------------------------------------------------------------------------------------------
+.page-9{
+
+  .filter{
+    background-image: url(../assets/16.jpg);
   }
 }
 
