--- a/css/index.scss
+++ b/css/index.scss
@@ -108,8 +108,12 @@
   }
   span{
     color:#fa58bf;
-    font-size:28px;
+    font-size:26px;
     margin-bottom:10px;
+  }
+  img:nth-of-type(2){
+    margin-top:-30px;
+    margin-bottom:-20px;
   }
   span:last-of-type{
     margin-top:10px;
@@ -174,9 +178,9 @@
 
 // 第9页---------------------------------------------------------------------------------------------------------------------------
 .page-9{
-
   .filter{
     background-image: url(../assets/16.jpg);
   }
 }
+
 
