--- a/css/index.css
+++ b/css/index.css
@@ -115,20 +115,8 @@
   background-size: 200%;
 }
 
-.page-1 span {
-  color: #fa58bf;
-  font-size: 26px;
-  margin-bottom: 10px;
-}
-
 .page-1 img:nth-of-type(2) {
-  margin-top: -30px;
-  margin-bottom: -20px;
-}
-
-.page-1 span:last-of-type {
-  margin-top: 10px;
-  margin-bottom: 0;
+  margin: 20px 0;
 }
 
 .page-2 img:nth-of-type(2) {
