--- a/css/index.scss
+++ b/css/index.scss
@@ -106,19 +106,19 @@
     background-position: 20% 70%;
     background-size: 200%;
   }
-  span{
-    color:#fa58bf;
-    font-size:26px;
-    margin-bottom:10px;
-  }
+  // span{
+  //   color:#fa58bf;
+  //   font-size:26px;
+  //   margin-bottom:10px;
+  // }
   img:nth-of-type(2){
-    margin-top:-30px;
-    margin-bottom:-20px;
+    margin:20px 0;
+    // margin-bottom:-20px;
   }
-  span:last-of-type{
-    margin-top:10px;
-    margin-bottom:0;
-  }
+  // span:last-of-type{
+  //   margin-top:10px;
+  //   margin-bottom:0;
+  // }
 }
 
 // 第2页---------------------------------------------------------------------------------------------------------------------------
