--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
   justify-content: center;
 }
 
-.vh-center {
+.vh-center, .loading-box, .music-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,7 +110,7 @@
 }
 
 .page-1 .filter {
-  background-image: url("https://6d61-magic-d13079-1255581239.tcb.qcloud.la/u=203448592,3993075874&fm=214&gp=0.jpg?sign=8aa025fe65def043c6a4a7ff7ccb27eb&t=1543980740");
+  background-image: url(../assets/14.jpg);
   background-position: 20% 70%;
   background-size: 200%;
 }
@@ -128,15 +128,15 @@
 }
 
 .page-3 .filter {
-  background-image: url(../assets/4.jpg);
+  background-image: url(../assets/7.jpg);
 }
 
 .page-4 .filter {
-  background-image: url(../assets/5.jpg);
+  background-image: url(../assets/8.jpg);
 }
 
 .page-5 .filter {
-  background-image: url(../assets/6.jpg);
+  background-image: url(../assets/9.jpg);
 }
 
 .page-6 .filter {
@@ -144,7 +144,7 @@
 }
 
 .page-7 .filter {
-  background-image: url(../assets/12.jpg);
+  background-image: url(../assets/14.jpg);
 }
 
 .page-7 img:nth-of-type(2) {
@@ -152,11 +152,11 @@
 }
 
 .page-8 .filter {
-  background-image: url(../assets/14.jpg);
+  background-image: url(../assets/12.jpg);
 }
 
 .page-9 .filter {
-  background-image: url(../assets/16.jpg);
+  background-image: url(../assets/13.jpg);
 }
 
 .loading-box {
@@ -169,9 +169,49 @@
   z-index: 9999;
 }
 
-.loading-box canvas {
-  width: 150px;
-  height: 150px;
-  display: block;
-  margin: 200px auto 0;
+.loading-box img {
+  width: 40%;
+}
+
+.music-btn {
+  position: fixed;
+  right: 25px;
+  top: 20px;
+  border-radius: 50%;
+  width: 0.6rem;
+  height: 0.6rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  animation-fill-mode: forwards;
+}
+
+.music-btn img {
+  width: 0.36rem;
+}
+
+.music-btn .pause-sign {
+  display: none;
+  position: absolute;
+  width: 1px;
+  height: 0.6rem;
+  left: 50%;
+  top: 0;
+  background-color: #fff;
+  transform: rotate(45deg);
+}
+
+.rotates {
+  animation-name: rotates;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-delay: 0;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotates {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
