--- a/css/index.css
+++ b/css/index.css
@@ -30,13 +30,13 @@
   justify-content: space-between;
 }
 
-.column-align-center {
+.column-align-center, .loading-box {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.column-center, .page, .loading-box {
+.column-center, .page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -171,6 +171,7 @@
 
 .loading-box img {
   width: 30%;
+  margin-top: 45%;
 }
 
 .loading-box span {
