--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@
 }
 
 .page-2 .filter {
-  background-image: url(https://6d61-magic-d13079-1255581239.tcb.qcloud.la/330.jpg?sign=832950a9b929393ce05804a113a70b0f&t=1542688956);
+  background-image: url(../assets/15.jpg);
 }
 
 .page-3 .filter {
